# collision-detection-testbed

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cdt_config.cmake  git_config.cmake
src/: CMakeLists.txt
src/cdt_core/: CMakeLists.txt  cdt_config.hpp.in
src/cdt_core/vector/: vector3.hpp
src/cdt_geometry/: CMakeLists.txt  triangle_intersection.hpp
